feat: research tree, unique resistances, per-map enemies, difficulty visual tints
Research system (ResearchScreen):
- 15 nodes across 4 tiers in tech tree
- Tier 1: +gold, +damage, +speed, +range
- Tier 2: per-element penetration (fire/ice/lightning/magic/physical)
- Tier 3: +20% vs bosses, +15% vs slowed, +15% vs blocked
- Tier 4: +damage II, +gold II, all-element penetration combo
- Unlock requires prerequisites and research gold
- Earned by beating levels (120*mapIndex gold, scaled per difficulty)

Enemy system:
- Resistances: unique types guaranteed (no repeats via shuffle)
- Per-map enemy pools: each map has distinct enemy roster
- Hard difficulty: enemies show red tint; Normal: blue tint; Easy: default
- isSlowed()/isBlocked() exposed for research bonus calculation

Tower: range now includes research range multiplier
GameSession: penetration applied to damage, gold multiplier on enemy kill

Co-authored-by: sVuMPaR <sVuMPaR@users.noreply.github.com>