@@ -5,29 +5,46 @@ import com.medievaltd.model.*;
 import java.util.*;
 
 public class WaveGenerator {
-    private static final DamageType[] RESISTANCE_POOL = {
-        DamageType.PHYSICAL, DamageType.FIRE, DamageType.ICE, DamageType.LIGHTNING, DamageType.MAGIC
+    private static final DamageType[] ALL_DAMAGE_TYPES = DamageType.values();
+
+    // Per-map enemy pools — each map uses a distinct set
+    private static final EnemyType[][] MAP_ENEMY_POOLS = {
+        // Map 1 — Forest Outpost: basic
+        { EnemyType.GOBLIN, EnemyType.WOLF, EnemyType.ORC },
+        // Map 2 — Bridge: fire+physical
+        { EnemyType.ORC, EnemyType.FIRE_IMP, EnemyType.KNIGHT },
+        // Map 3 — Frozen Gorge: ice+magic
+        { EnemyType.FROST_ELEMENTAL, EnemyType.DARK_MAGE, EnemyType.WOLF },
+        // Map 4 — Gates of Darkness: all heavy
+        { EnemyType.GOLEM, EnemyType.WYVERN, EnemyType.KNIGHT, EnemyType.DARK_MAGE },
     };
 
-    private static final EnemyType[] EARLY_ENEMIES = {
-        EnemyType.GOBLIN, EnemyType.WOLF
+    private static final EnemyType[][] MAP_MINI_BOSS_POOLS = {
+        { EnemyType.ORC, EnemyType.WOLF },
+        { EnemyType.KNIGHT, EnemyType.FIRE_IMP },
+        { EnemyType.FROST_ELEMENTAL, EnemyType.DARK_MAGE },
+        { EnemyType.GOLEM, EnemyType.WYVERN },
     };
-    private static final EnemyType[] MID_ENEMIES = {
-        EnemyType.ORC, EnemyType.FIRE_IMP, EnemyType.FROST_ELEMENTAL
+
+    private static final EnemyType[][] MAP_BOSS_POOLS = {
+        { EnemyType.ORC, EnemyType.KNIGHT },
+        { EnemyType.DRAGON, EnemyType.KNIGHT },
+        { EnemyType.DRAGON, EnemyType.GOLEM },
+        { EnemyType.DRAGON, EnemyType.GOLEM, EnemyType.WYVERN },
     };
-    private static final EnemyType[] LATE_ENEMIES = {
-        EnemyType.KNIGHT, EnemyType.DARK_MAGE, EnemyType.WYVERN
-    };
-    private static final EnemyType[] BOSS_POOL = {
-        EnemyType.DRAGON, EnemyType.GOLEM, EnemyType.WYVERN, EnemyType.KNIGHT
-    };
-    private static final EnemyType[] MINI_BOSS_POOL = {
-        EnemyType.ORC, EnemyType.KNIGHT, EnemyType.FROST_ELEMENTAL, EnemyType.DARK_MAGE
+
+    private static final EnemyType[] FINAL_BOSSES = {
+        EnemyType.DRAGON, EnemyType.GOLEM, EnemyType.WYVERN, EnemyType.DRAGON
     };
 
     public static List<WaveDefinition> generate(int totalWaves, int mapIndex, Difficulty difficulty) {
         Random rng = new Random(mapIndex * 1000L + difficulty.ordinal());
         List<WaveDefinition> waves = new ArrayList<>();
+        int poolIdx = Math.max(0, Math.min(mapIndex - 1, MAP_ENEMY_POOLS.length - 1));
+        EnemyType[] enemyPool = MAP_ENEMY_POOLS[poolIdx];
+        EnemyType[] miniBossPool = MAP_MINI_BOSS_POOLS[poolIdx];
+        EnemyType[] bossPool = MAP_BOSS_POOLS[poolIdx];
+        EnemyType finalBossType = FINAL_BOSSES[poolIdx];
 
         for (int w = 1; w <= totalWaves; w++) {
             boolean isBossWave = (w % 5 == 0);
@@ -36,36 +53,35 @@ public class WaveGenerator {
 
             List<SpawnEntry> spawns = new ArrayList<>();
             float progress = (float) w / totalWaves;
+            int baseCount = 5 + (int) (progress * 12);
 
-            // Regular enemies for the wave
-            int baseCount = 6 + (int) (progress * 12);
-            EnemyType[] pool = pickPool(progress);
-            EnemyType mainType = pool[rng.nextInt(pool.length)];
-            spawns.add(new SpawnEntry(mainType, baseCount, 0.5f + (1f - progress) * 0.5f));
+            EnemyType mainType = enemyPool[rng.nextInt(enemyPool.length)];
+            spawns.add(new SpawnEntry(mainType, baseCount, 0.5f + (1f - progress) * 0.4f));
 
-            if (progress > 0.3f && pool.length > 1) {
-                EnemyType secondType = pool[rng.nextInt(pool.length)];
-                if (secondType != mainType) {
-                    spawns.add(new SpawnEntry(secondType, baseCount / 2, 0.6f));
+            if (progress > 0.25f && enemyPool.length > 1) {
+                EnemyType second;
+                int attempts = 0;
+                do {
+                    second = enemyPool[rng.nextInt(enemyPool.length)];
+                    attempts++;
+                } while (second == mainType && attempts < 5);
+                if (second != mainType) {
+                    spawns.add(new SpawnEntry(second, baseCount / 2, 0.7f));
                 }
             }
 
-            // Mini-boss at end of every non-5th wave
             if (isMiniBossWave) {
-                EnemyType mbType = MINI_BOSS_POOL[rng.nextInt(MINI_BOSS_POOL.length)];
-                spawns.add(new SpawnEntry(mbType, 1, 0f, EnemyRole.MINI_BOSS));
+                EnemyType mb = miniBossPool[rng.nextInt(miniBossPool.length)];
+                spawns.add(new SpawnEntry(mb, 1, 0f, EnemyRole.MINI_BOSS));
             }
 
-            // Boss every 5th wave
             if (isBossWave && !isFinalWave) {
-                EnemyType bossType = BOSS_POOL[rng.nextInt(BOSS_POOL.length)];
-                spawns.add(new SpawnEntry(bossType, 1, 0f, EnemyRole.BOSS));
+                EnemyType bt = bossPool[rng.nextInt(bossPool.length)];
+                spawns.add(new SpawnEntry(bt, 1, 0f, EnemyRole.BOSS));
             }
 
-            // Final boss
             if (isFinalWave) {
-                EnemyType bossType = EnemyType.DRAGON;
-                spawns.add(new SpawnEntry(bossType, 1, 0f, EnemyRole.FINAL_BOSS));
+                spawns.add(new SpawnEntry(finalBossType, 1, 0f, EnemyRole.FINAL_BOSS));
             }
 
             float delay = isBossWave || isFinalWave ? 6f : 4f;
@@ -86,59 +102,47 @@ public class WaveGenerator {
     private static Resistances easyResistances(EnemyRole role, Random rng) {
         return switch (role) {
             case NORMAL, MINI_BOSS -> Resistances.none();
-            case BOSS -> randomResistances(rng, 1, false, false);
-            case FINAL_BOSS -> randomResistances(rng, 2, false, false);
+            case BOSS -> pickUniqueResistances(rng, 1, false, false);
+            case FINAL_BOSS -> pickUniqueResistances(rng, 2, false, false);
         };
     }
 
     private static Resistances normalResistances(EnemyRole role, Random rng) {
         return switch (role) {
             case NORMAL -> Resistances.none();
-            case MINI_BOSS -> randomResistances(rng, 1, false, false);
-            case BOSS -> randomResistances(rng, 2, false, false);
-            case FINAL_BOSS -> randomResistancesWithImmunity(rng, 1, 1, false);
+            case MINI_BOSS -> pickUniqueResistances(rng, 1, false, false);
+            case BOSS -> pickUniqueResistances(rng, 2, false, false);
+            case FINAL_BOSS -> pickUniqueResistances(rng, 1, true, false);
         };
     }
 
     private static Resistances hardResistances(EnemyRole role, Random rng) {
         return switch (role) {
-            case NORMAL -> randomResistances(rng, 1, false, false);
-            case MINI_BOSS -> randomResistances(rng, 2, false, false);
-            case BOSS -> randomResistancesWithImmunity(rng, 0, 1, false);
-            case FINAL_BOSS -> randomResistancesWithImmunity(rng, 0, 1, true);
+            case NORMAL -> pickUniqueResistances(rng, 1, false, false);
+            case MINI_BOSS -> pickUniqueResistances(rng, 2, false, false);
+            case BOSS -> pickUniqueResistances(rng, 1, true, false);
+            case FINAL_BOSS -> pickUniqueResistances(rng, 1, true, true);
         };
     }
 
-    private static Resistances randomResistances(Random rng, int count, boolean immune, boolean slowImmune) {
-        Resistances r = new Resistances();
-        List<DamageType> pool = new ArrayList<>(List.of(RESISTANCE_POOL));
+    /**
+     * Picks `count` unique DamageType values (no repeats), then applies:
+     * - first one as immunity (1.0) if withImmunity is true, rest as resistance (0.2–0.5)
+     * - slow immunity if slowImmune is true
+     */
+    private static Resistances pickUniqueResistances(Random rng, int count, boolean withImmunity, boolean slowImmune) {
+        List<DamageType> pool = new ArrayList<>(Arrays.asList(ALL_DAMAGE_TYPES));
         Collections.shuffle(pool, rng);
+        Resistances r = new Resistances();
         for (int i = 0; i < Math.min(count, pool.size()); i++) {
-            float val = immune ? 1f : 0.2f + rng.nextFloat() * 0.3f;
-            r.set(pool.get(i), val);
+            DamageType dt = pool.get(i);
+            if (i == 0 && withImmunity) {
+                r.setImmune(dt);
+            } else {
+                r.set(dt, 0.20f + rng.nextFloat() * 0.30f);
+            }
         }
         r.setSlowImmune(slowImmune);
         return r;
-    }
-
-    private static Resistances randomResistancesWithImmunity(Random rng, int resCount, int immuneCount, boolean slowImmune) {
-        Resistances r = new Resistances();
-        List<DamageType> pool = new ArrayList<>(List.of(RESISTANCE_POOL));
-        Collections.shuffle(pool, rng);
-        int idx = 0;
-        for (int i = 0; i < immuneCount && idx < pool.size(); i++, idx++) {
-            r.setImmune(pool.get(idx));
-        }
-        for (int i = 0; i < resCount && idx < pool.size(); i++, idx++) {
-            r.set(pool.get(idx), 0.2f + rng.nextFloat() * 0.3f);
-        }
-        r.setSlowImmune(slowImmune);
-        return r;
-    }
-
-    private static EnemyType[] pickPool(float progress) {
-        if (progress < 0.3f) return EARLY_ENEMIES;
-        if (progress < 0.65f) return MID_ENEMIES;
-        return LATE_ENEMIES;
     }
 }
